<resources>
    <string name="app_name">LuxConnect</string>
    <string name="login_titulo_entrar">Entrar</string>
    <string name="login_campo_email">Email</string>
    <string name="login_campo_senha">Senha</string>
    <string name="login_botao_entrar">Entrar</string>
    <string name="login_botao_criar_conta">Criar Conta</string>
    <string name="login_botao_esqueci_senha">Esqueci minha senha</string>
    <string name="login_erro_email_vazio">Por favor, insira seu email</string>
    <string name="login_erro_email_invalido">Por favor, insira um email válido</string>
    <string name="login_erro_senha_vazia">Por favor, insira sua senha</string>
    <string name="login_erro_senha_curta">A senha deve ter pelo menos 6 caracteres</string>
    <string name="login_erro_credenciais_invalidas">Email ou senha incorretos</string>
    <string name="login_erro_usuario_nao_encontrado">Usuário não encontrado</string>
    <string name="login_erro_conexao">Erro de conexão. Tente novamente</string>
    <string name="cadastro_titulo_bemvindo">Bem-vindo ao LuxConnect</string>
    <string name="cadastro_subtitulo_criar_conta">Crie sua conta para continuar</string>
    <string name="cadastro_campo_nome_completo">Nome Completo</string>
    <string name="cadastro_campo_email">Email</string>
    <string name="cadastro_campo_senha">Senha</string>
    <string name="cadastro_campo_confirmar_senha">Confirmar Senha</string>
    <string name="cadastro_campo_telefone">Telefone</string>
    <string name="cadastro_botao_criar_conta">Criar Conta</string>
    <string name="cadastro_botao_ja_tenho_conta">Já tenho uma conta</string>
    <string name="cadastro_erro_nome_vazio">Por favor, insira seu nome completo</string>
    <string name="cadastro_erro_nome_curto">Nome deve ter pelo menos 2 caracteres</string>
    <string name="cadastro_erro_email_vazio">Por favor, insira seu email</string>
    <string name="cadastro_erro_email_invalido">Por favor, insira um email válido</string>
    <string name="cadastro_erro_senha_vazia">Por favor, insira uma senha</string>
    <string name="cadastro_erro_senha_curta">A senha deve ter pelo menos 6 caracteres</string>
    <string name="cadastro_erro_confirmar_senha_vazia">Por favor, confirme sua senha</string>
    <string name="cadastro_erro_senhas_nao_coincidem">As senhas não coincidem</string>
    <string name="cadastro_erro_telefone_vazio">Por favor, insira seu telefone</string>
    <string name="cadastro_erro_telefone_invalido">Por favor, insira um telefone válido</string>
    <string name="cadastro_erro_email_ja_existe">Este email já está cadastrado</string>
    <string name="cadastro_erro_conexao">Erro de conexão. Tente novamente</string>
    <string name="cadastro_sucesso">Conta criada com sucesso!</string>
    <string name="main_saudacao_bom_dia">Bom dia</string>
    <string name="main_saudacao_boa_tarde">Boa tarde</string>
    <string name="main_saudacao_boa_noite">Boa noite</string>
    <string name="main_secao_servicos">Nossos Serviços</string>
    <string name="main_secao_barbeiros">Nossos Barbeiros</string>
    <string name="main_secao_horarios">Horários Disponíveis</string>
    <string name="main_botao_agendar">Agendar Serviço</string>
    <string name="main_botao_meus_agendamentos">Meus Agendamentos</string>
    <string name="main_botao_perfil">Perfil</string>
    <string name="main_botao_configuracoes">Configurações</string>
    <string name="main_botao_sair">Sair</string>
    <string name="main_menu_inicio">Início</string>
    <string name="main_menu_servicos">Serviços</string>
    <string name="main_menu_agendamentos">Agendamentos</string>
    <string name="main_menu_perfil">Perfil</string>
    <string name="boas_vindas_titulo">Bem-vindo ao LuxConnect</string>
    <string name="boas_vindas_subtitulo">Sua beleza, nossa paixão</string>
    <string name="intro_slide1_titulo">Serviços Premium</string>
    <string name="intro_slide1_descricao">Cortes de cabelo, barba e tratamentos de qualidade profissional</string>
    <string name="intro_slide2_titulo">Agendamento Fácil</string>
    <string name="intro_slide2_descricao">Agende seus horários de forma rápida e conveniente</string>
    <string name="intro_slide3_titulo">Profissionais Experientes</string>
    <string name="intro_slide3_descricao">Nossa equipe é formada por barbeiros qualificados e experientes</string>
    <string name="icone_boas_vindas">Ícone de boas-vindas</string>
    <string name="intro_botao_proximo">Próximo</string>
    <string name="intro_botao_pular">Pular</string>
    <string name="intro_botao_comecar">Começar</string>
    <string name="escolha_servico_titulo">Escolha seu Serviço</string>
    <string name="escolha_servico_subtitulo">Selecione o serviço desejado</string>
    <string name="servico_corte_cabelo">Corte de Cabelo</string>
    <string name="servico_barba">Barba</string>
    <string name="servico_corte_barba">Corte + Barba</string>
    <string name="servico_sobrancelha">Sobrancelha</string>
    <string name="servico_tratamento_capilar">Tratamento Capilar</string>
    <string name="servico_hidratacao">Hidratação</string>
    <string name="descricao_corte_cabelo">Corte personalizado de acordo com seu estilo</string>
    <string name="descricao_barba">Aparar e modelar a barba com precisão</string>
    <string name="descricao_corte_barba">Serviço completo de corte de cabelo e barba</string>
    <string name="descricao_sobrancelha">Design e limpeza das sobrancelhas</string>
    <string name="descricao_tratamento_capilar">Tratamentos especiais para cabelo</string>
    <string name="descricao_hidratacao">Hidratação profunda para cabelos ressecados</string>
    <string name="preco_corte_cabelo">R$ 35,00</string>
    <string name="preco_barba">R$ 25,00</string>
    <string name="preco_corte_barba">R$ 50,00</string>
    <string name="preco_sobrancelha">R$ 15,00</string>
    <string name="preco_tratamento_capilar">R$ 45,00</string>
    <string name="preco_hidratacao">R$ 40,00</string>
    <string name="duracao_corte_cabelo">45 min</string>
    <string name="duracao_barba">30 min</string>
    <string name="duracao_corte_barba">1h 15min</string>
    <string name="duracao_sobrancelha">20 min</string>
    <string name="duracao_tratamento_capilar">1h</string>
    <string name="duracao_hidratacao">50 min</string>
    <string name="escolha_servico_botao_continuar">Continuar</string>
    <string name="escolha_servico_botao_voltar">Voltar</string>
    <string name="esqueci_senha_titulo">Esqueci minha Senha</string>
    <string name="esqueci_senha_subtitulo">Digite seu email para receber instruções de recuperação</string>
    <string name="esqueci_senha_campo_email">Email</string>
    <string name="esqueci_senha_botao_enviar">Enviar</string>
    <string name="esqueci_senha_botao_voltar">Voltar ao Login</string>
    <string name="esqueci_senha_sucesso">Email de recuperação enviado!</string>
    <string name="esqueci_senha_erro_email_vazio">Por favor, insira seu email</string>
    <string name="esqueci_senha_erro_email_invalido">Por favor, insira um email válido</string>
    <string name="esqueci_senha_erro_email_nao_encontrado">Email não encontrado</string>
    <string name="esqueci_senha_erro_conexao">Erro de conexão. Tente novamente</string>
    <string name="_30k_nclients">30K+ Clientes</string>
    <string name="seguidores_count">50K Seguidores</string>
    <string name="aproveite_os_beneficos_com_servi_os_exclusivos_e_promo_es_especiais">Aproveite os benefícios com serviços exclusivos e promoções especiais</string>
    <string name="status_aberto">Aberto</string>
    <string name="servico_cabelo_barba">Cabelo + Barba</string>
    <string name="servico_lavagem_cabelo">Lavagem de Cabelo</string>
    <string name="selecione_horario_titulo">Selecione o Horário</string>
    <string name="btn_agendar_horario">Agendar Horário</string>
    <string name="voltar_para_login">Voltar para Login</string>
    <string name="esqueceu_senha">Esqueceu a Senha?</string>
    <string name="digite_email_recuperacao">Digite seu email para recuperação</string>
    <string name="email">Email</string>
    <string name="enviar_recuperacao">Enviar Recuperação</string>
    <string name="imagem_principal">Imagem Principal</string>
    <string name="entrar">Entrar</string>
    <string name="registra_se">Registrar-se</string>
    <string name="entrar_content_description">Botão para fazer login</string>
    <string name="registra_se_content_description">Botão para criar nova conta</string>
    <string name="esqueceu_da_senha">Esqueceu da senha?</string>
    <string name="esqueceu_da_senha_content_description">Link para recuperação de senha</string>
    <string name="ou_continue_com">Ou continue com</string>
    <string name="login_facebook">Login com Facebook</string>
    <string name="login_google">Login com Google</string>
    <string name="background_image_description">Imagem de fundo da tela</string>
    <string name="voltar_description">Botão para voltar</string>
    <string name="email_input_description">Campo de entrada para email</string>
    <string name="senha">Senha</string>
    <string name="password_input_description">Campo de entrada para senha</string>
    <string name="login_button_description">Botão para fazer login</string>
    <string name="forgot_password_description">Link para recuperar senha</string>
    <string name="signup_link_description">Link para criar nova conta</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="menu">Menu</string>
    <string name="bem_vindo_usuario">Bem-vindo, %s</string>
    <string name="subtitulo_barbearia">Sua barbearia de confiança</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="imagem_promocional_desc">Imagem promocional da barbearia</string>
    <string name="reserve_agora">Reserve Agora</string>
    <string name="barbeiros_disponiveis">Barbeiros Disponíveis</string>
    <string name="back_button_description">Botão para voltar</string>
    <string name="signup_subtitle">Crie sua conta e aproveite nossos serviços</string>
    <string name="full_name_hint">Nome Completo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="confirm_password_hint">Confirmar Senha</string>
    <string name="signup_button">Criar Conta</string>
    <string name="already_have_account">Já possui uma conta?</string>
    <string name="login_link">Fazer Login</string>
    <string name="barber_photo_description">Foto do barbeiro</string>
    <string name="barber_name_placeholder">Nome do Barbeiro</string>
    <string name="barber_speciality_placeholder">Especialidade</string>
    <string name="available_hours">Horários Disponíveis</string>
    <string name="reserve_now_description">Botão para reservar horário</string>
    <string name="reserve_now">Reservar</string>
    <string name="agendamento_confirmado">Agendamento confirmado: %1$s às %2$s</string>
    <string name="agendamento_erro_selecao">Por favor, selecione um serviço e um horário</string>
    <string name="validacao_email_obrigatorio">Email é obrigatório</string>
    <string name="validacao_email_invalido">Por favor, insira um email válido</string>
    <string name="erro_generico">Ocorreu um erro. Tente novamente</string>
    <string name="confirmacao_titulo">Confirmação do Agendamento</string>
    <string name="confirmacao_resumo">Confira os dados antes de confirmar:</string>
    <string name="rotulo_servico">Serviço</string>
    <string name="rotulo_horario">Horário</string>
    <string name="rotulo_salao">Salão</string>
    <string name="confirmando">Confirmando…</string>
    <string name="agendado_com_sucesso">Agendamento realizado com sucesso!</string>
    <string name="btn_ver_meus_agendamentos">Ver meus agendamentos</string>
    <string name="btn_tentar_novamente">Tentar novamente</string>
    <string name="voltar">Voltar</string>
</resources>